Accelerometer Service Implemented
TODO: fix Screen from smartwatch to Smartphone and create Gyroscope Service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
                 android:resource="@drawable/tile_preview" />
         </service>
 
+        <service android:name=".presentation.AccelerometerService" />
+
+
         <uses-library
             android:name="com.google.android.wearable"
             android:required="true" />
