--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Burnify">
@@ -28,7 +28,11 @@
         </activity>
 
         <service
-            android:name=".AccelerometerService"
+            android:name=".service.AccelerometerService"
+            android:exported="false" />
+
+        <service
+            android:name=".service.GyroscopeService"
             android:exported="false" />
 
 
