--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,9 @@
             android:name=".service.GyroscopeService"
             android:exported="false" />
 
-
+        <service
+            android:name=".service.MagnetometerService"
+            android:exported="false" />
 
 
     </application>
