--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,11 +42,13 @@
 
         <service
             android:name=".service.GyroscopeService"
-            android:exported="false" />
+            android:foregroundServiceType="health"
+            android:exported="true" />
 
         <service
             android:name=".service.MagnetometerService"
-            android:exported="false" />
+            android:foregroundServiceType="health"
+            android:exported="true" />
 
         <receiver android:name=".service.BootReceiver"
             android:exported="false">
