--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,19 +37,13 @@
         </activity>
 
         <service
-            android:name=".service.AccelerometerService"
-            android:foregroundServiceType="health"
-            android:exported="true" />
+            android:name=".service.UnifiedSensorService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="health">
+        </service>
 
-        <service
-            android:name=".service.GyroscopeService"
-            android:foregroundServiceType="health"
-            android:exported="true" />
 
-        <service
-            android:name=".service.MagnetometerService"
-            android:foregroundServiceType="health"
-            android:exported="true" />
 
         <receiver android:name=".service.BootReceiver"
             android:exported="false">
